2006-11-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.0.3
	* inttime: extention for months and years [request: Holger Goettel]
	* remaplib.sort_add: don't sort if num_links <= 1
	* remaplib.remap_bi?: check that src_add is valid
	* Remap: use REMAP_NON_GLOBAL only for gridsize > 1
	* pstreamDefVlist: remove Read -> Write data-race on pstreamptr->vlistID
	* Version 1.0.3 released

2006-09-18  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.0.2
	* set alias gradsdes to gradsdes2
	* rename gradsdes to gradsdes1
	* New operator: int and nint (Math) [request: Joerg Wegner]
	* New operator: ydaysum, ymonsum, yseassum [request: Hannes Reuter]
	* add option -e exp to test DRMAA
	* add option -z szip to compress GRIB records with SZIP
	* use DBL_IS_EQUAL to compare floating point
	* remapbil, remapbic: improvement and speedup for regional lonlat grids
	* Seltime: print warning message if parameter not found
	* pstreamDefVlist: unpack netCDF data if datatype = FLT64
	* Version 1.0.2 released

2006-08-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.0.1
	* add option -b to set the number of bits for the output precision
	* support of 1 to 32 bit GRIB data
	* set MIN_STACK_SIZE to 64MB
	* seldate: use parameter - for min and max val
	* seldate: change date format to YYYY-MM-DDThh:mm [request: Martina Stockhaus]
	* New operator: selstdname, showstdname [request: Martina Stockhaus]
	* New operator: setrcaname, seloperator for RCA GRIB datasets [Frida Brantvall]
	* New operator: selltype, setltype, chltype, showltype [together with Frida Brantvall]
	* New operator: setpartabv
	* add new parameter table format
	* fix problems on cygwin [report: Mark Hadfield]
	* merge: move vlistDestroy after streamClose [report: Matthias Cuntz]
	* gradsdes: fix bug for only one record without time [report: Angelika Heil]
	* gradsdes: fix problem for variable names with - character
	* namelist update