@@ -1,6 +1,7 @@
 2006-11-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* using CDI library version 1.0.3
+	* New operator: inttime2 [request: Michael Boettinger]
 	* inttime: extention for months and years [request: Holger Goettel]
 	* remaplib.sort_add: don't sort if num_links <= 1
 	* remaplib.remap_bi?: check that src_add is valid
